// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə kʼɪŋ siːz ðə wulh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə dɔgs siː ðə wulhs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə kʼɪŋ wɔkʼɪŋz ætʼ ðə rɪvər",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə kʼɪŋ nat siːz ðə wulh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "reːgeːiləlu βideret lupuiləlu",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kaneːiiləlu βiderent lupuiiləlu",
    },
    {
      "english": "i give you the bread",
      "target": "ego dareo tu",
    },
    {
      "english": "the king walks at the river",
      "target": "reːgeːiləlu ambulareːt flumeːiləlu",
    },
    {
      "english": "the king does not see the wolf",
      "target": "reːgeːiləlu non βideret lupuiləlu",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "e sewi e soweli luki",
    },
    {
      "english": "the dogs see the wolves",
      "target": "e sosoweli e sosoweli luki",
    },
    {
      "english": "i give you the bread",
      "target": "mi sina fana",
    },
    {
      "english": "the king walks at the river",
      "target": "e sewi saki e telo tawa",
    },
    {
      "english": "the king does not see the wolf",
      "target": "e sewi e soweli ala luki",
    },
  ],
  "preset": "tokipona",
}
`;
